...
class Inicio extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return MaterialApp(
    home: Scaffold(
      appBar: AppBar(
        title: Text("Pantalla de Bienvenida"),
        backgroundColor: Color.fromRGBO(155, 229, 170, 1),
      ),
      body: PantallaInicio(),
    ),
    );
  }
...
                      padding: const EdgeInsets.all(8.0),
                      child: Container(
                        decoration: BoxDecoration(
                          border: Border.all(color: Color.fromRGBO(100, 100, 100, 0.7)),
                          color: Color.fromRGBO(100, 100, 100, 0.7)
                        ),
                        child: Text("Formulario de Contacto",
                          style: TextStyle(fontSize: 50, color: Colors.white, fontWeight: FontWeight.bold),
                          textAlign: TextAlign.center,),
                      ),
                    ),
                  ),
                  ),
...
